--- a/order-admin/index.html
+++ b/order-admin/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>拓升订单后台管理系统</title>
+    <title>订单管理</title>
     <link rel="stylesheet" href="./static/css/reset.css">
   </head>
   <body>
